Fixed bug#13549 - Scrolling not possible for some articles on iOS Safari.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Table.css
@@ -579,7 +579,7 @@ thead .headerSortDown a {
 }
 
 #OverviewBody.Overview.TicketList {
-    overflow: visible;
+    overflow-x: auto;
 }
 #OverviewBody.Overview.TicketList table {
     overflow: visible;
